--- a/test_templates/accounts/login.html
+++ b/test_templates/accounts/login.html
@@ -53,11 +53,19 @@
                             {% endif %}
                         </div>
 
+                        <div class="mb-3">
+                            {{ form.recaptcha }}
+                            {% if form.recaptcha.errors %}
+                                <div class="text-danger small">{{ form.recaptcha.errors }}</div>
+                            {% endif %}
+                      </div>
+
                         <button type="submit" class="btn btn-primary w-100">Войти</button>
                     </form>
 
                     <div class="text-center mt-3">
                         <p>Нет аккаунта? <a href="{% url 'register' %}">Зарегистрируйтесь</a></p>
+                        <p>Войти через <a href="{% url 'social:begin' 'google-oauth2' %}">Google</a></p>
                     </div>
                 </div>
             </div>
