--- a/test_templates/accounts/profile_edit.html
+++ b/test_templates/accounts/profile_edit.html
@@ -24,6 +24,12 @@
                         {% endif %}
 
                         <div class="row">
+<!--                            <div class="col-md-6">-->
+<!--                                <div class="mb-3">-->
+<!--                                    <label class="form-label">avatar</label>-->
+<!--                                    {{ form.avatar }}-->
+<!--                                </div>-->
+<!--                            </div>-->
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">Имя пользователя</label>
