--- a/test_templates/accounts/password_change.html
+++ b/test_templates/accounts/password_change.html
@@ -23,22 +23,30 @@
                             </div>
                         {% endif %}
 
-                        <div class="mb-3">
+                        <div class="col-12 mb-3">
                             <label class="form-label">Старый пароль</label>
-                            {{ form.old_password }}
+                            <input type="password" name="old_password" class="form-control" autocomplete="current-password"
+                                   autofocus="" required="" id="id_old_password" placeholder="Введите старый пароль">
+<!--                            {{ form.old_password }}-->
                         </div>
 
-                        <div class="mb-3">
+                        <div class="col-12 mb-3">
                             <label class="form-label">Новый пароль</label>
-                            {{ form.new_password1 }}
-                            <div class="form-text">
-                                {{ form.new_password1.help_text }}
-                            </div>
+<!--                            {{ form.new_password1 }}-->
+                            <input type="password" name="new_password1" class="form-control" autocomplete="new-password"
+                                   required="" aria-describedby="id_new_password1_helptext" id="id_new_password1"
+                                   placeholder="Введите новый пароль">
+<!--                            <div class="form-text">-->
+<!--                                {{ form.new_password1.help_text }}-->
+<!--                            </div>-->
                         </div>
 
-                        <div class="mb-3">
+                        <div class="col-12 mb-3">
                             <label class="form-label">Подтверждение нового пароля</label>
-                            {{ form.new_password2 }}
+                            <input type="password" name="new_password2" class="form-control" autocomplete="new-password"
+                                   required="" aria-describedby="id_new_password2_helptext" id="id_new_password2"
+                                   placeholder="Введите новый пароль еще раз">
+<!--                            {{ form.new_password2 }}-->
                         </div>
 
                         <div class="d-flex justify-content-between">
