--- a/test_templates/accounts/register.html
+++ b/test_templates/accounts/register.html
@@ -10,46 +10,59 @@
                 </div>
                 <div class="card-body">
                     <form method="post">
-                        {% csrf_token %}
+                        <div class="row">
+                            {% csrf_token %}
 
-                        {% if form.errors %}
-                            <div class="alert alert-danger">
-                                {% for field, errors in form.errors.items %}
-                                    {% for error in errors %}
-                                        <p>{{ error }}</p>
+                            {% if form.errors %}
+                                <div class="alert alert-danger">
+                                    {% for field, errors in form.errors.items %}
+                                        {% for error in errors %}
+                                            <p>{{ error }}</p>
+                                        {% endfor %}
                                     {% endfor %}
-                                {% endfor %}
+                                </div>
+                            {% endif %}
+
+<!--                            <div class="mb-3">-->
+                            <div class="col-md-12 mb-3">
+                                <label for="{{ form.email.id_for_label }}" class="form-label">Email</label>
+                                {{ form.email }}
                             </div>
-                        {% endif %}
 
-                        <div class="mb-3">
-                            <label for="{{ form.email.id_for_label }}" class="form-label">Email</label>
-                            {{ form.email }}
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="{{ form.username.id_for_label }}" class="form-label">Имя пользователя</label>
-                            {{ form.username }}
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="{{ form.password1.id_for_label }}" class="form-label">Пароль</label>
-                            {{ form.password1 }}
-                            <div class="form-text">
-                                Пароль должен содержать как минимум 8 символов.
+<!--                            <div class="mb-3">-->
+                            <div class="col-md-12 mb-3">
+                                <label for="{{ form.username.id_for_label }}" class="form-label">Имя пользователя</label>
+                                {{ form.username }}
                             </div>
+
+<!--                            <div class="mb-3">-->
+                            <div class="col-md-12 mb-3">
+                                <label for="{{ form.password1.id_for_label }}" class="form-label">Пароль</label>
+<!--                                {{ form.password1 }}-->
+                                <input type="password" name="password1" class="form-control" autocomplete="new-password"
+                                       required="" aria-describedby="id_password1_helptext" id="id_password1"
+                                       placeholder="Введите пароль">
+<!--                                <div class="form-text">-->
+<!--                                    Пароль должен содержать как минимум 8 символов.-->
+<!--                                </div>-->
+                            </div>
+
+<!--                            <div class="mb-3">-->
+                            <div class="col-md-12 mb-3">
+                                <label for="{{ form.password2.id_for_label }}" class="form-label">Подтверждение пароля</label>
+                                <input type="password" name="password2" class="form-control" autocomplete="new-password"
+                                       required="" aria-describedby="id_password2_helptext" id="id_password2"
+                                       placeholder="Введите пароль еще раз">
+<!--                                {{ form.password2 }}-->
+                            </div>
+
+<!--                            <div class="mb-3">-->
+                            <div class="col-md-12 mb-3">
+                                {{ form.recaptcha }}
+                          </div>
+
+                            <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
                         </div>
-
-                        <div class="mb-3">
-                            <label for="{{ form.password2.id_for_label }}" class="form-label">Подтверждение пароля</label>
-                            {{ form.password2 }}
-                        </div>
-
-                        <div class="mb-3">
-                            {{ form.recaptcha }}
-                      </div>
-
-                        <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
                     </form>
 
                     <div class="text-center mt-3">
