--- a/test_templates/shop.html
+++ b/test_templates/shop.html
@@ -22,20 +22,20 @@
         </div>
 
         <!-- ##### Brands Widget ##### -->
-        <div class="widget brands mb-50">
-            <!-- Widget Title -->
-            <h6 class="widget-title mb-30">Brands</h6>
+<!--        <div class="widget brands mb-50">-->
+<!--            &lt;!&ndash; Widget Title &ndash;&gt;-->
+<!--            <h6 class="widget-title mb-30">Brands</h6>-->
 
-            <div class="widget-desc">
-                <!-- Single Form Check -->
-                {% for brand in brands %}
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="{{ brand }}" id="{{ brand }}">
-                    <label class="form-check-label" for="{{ brand }}">{{ brand }}</label>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
+<!--            <div class="widget-desc">-->
+<!--                &lt;!&ndash; Single Form Check &ndash;&gt;-->
+<!--                {% for brand in brands %}-->
+<!--                <div class="form-check">-->
+<!--                    <input class="form-check-input" type="checkbox" value="{{ brand }}" id="{{ brand }}">-->
+<!--                    <label class="form-check-label" for="{{ brand }}">{{ brand }}</label>-->
+<!--                </div>-->
+<!--                {% endfor %}-->
+<!--            </div>-->
+<!--        </div>-->
 
 
         <!-- ##### Price Widget ##### -->
@@ -68,11 +68,6 @@
                     ${{ request.GET.price_min|default:100 }} - ${{ request.GET.price_max|default:50000 }}
                 </div>
             </div>
-
-            <!-- Кнопка применения фильтра (опционально) -->
-            <button type="submit" class="btn btn-primary btn-sm mt-2" style="display: none;" id="price-submit">
-                Применить фильтр по цене
-            </button>
         </form>
     </div>
 </div>
@@ -87,10 +82,10 @@
                         <!-- Total Products -->
                         <div class="total-products">
                             <p>Showing {{ page_obj.start_index }}-{{ page_obj.end_index }} 0f {{ paginator.count }}</p>
-                            <div class="view d-flex">
-                                <a href="#"><i class="fa fa-th-large" aria-hidden="true"></i></a>
-                                <a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>
-                            </div>
+<!--                            <div class="view d-flex">-->
+<!--                                <a href="#"><i class="fa fa-th-large" aria-hidden="true"></i></a>-->
+<!--                                <a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>-->
+<!--                            </div>-->
                         </div>
 
                         <!-- Sorting and View Count Widget-->
@@ -138,7 +133,7 @@
                     <div class="single-product-wrapper">
                         <!-- Product Image -->
                         <div class="product-img">
-                            <a href="{{ product.get_absolute_url }}"><img src="{{ product.image.url }}" alt=""></a>
+                            <a href="{{ product.get_absolute_url }}"><img src="{{ product.image.url }}" width="250" height="150"></a>
                             <!-- Hover Thumb -->
 <!--                            <img class="hover-img" src="img/product-img/product2.jpg" alt="">-->
                         </div>
